Resolve warning about [Core.Time] being deprecated
From that commit we drop the compatibility < [v0.16] for the [example/] part of
the project. Note that this still supports OCaml 4.14.

--- a/example/dune
+++ b/example/dune
@@ -2,7 +2,7 @@
  (public_name example)
  (package feather_tests)
  (modules example)
- (libraries core feather stdio)
+ (libraries core core_unix.time_float_unix feather stdio)
  (preprocess
   (pps ppx_expect ppx_string)))
 
