--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,4 +55,4 @@ jobs:
           steps: install-dune enable-pkg lazy-update-depexts install-gpatch install-depexts
 
       - name: Build & Run tests
-        run: dune build @all @runtest --only-packages=${{ env.PACKAGES }}
+        run: dune build @all @runtest --only-packages=${{ env.PACKAGES }} --display=verbose
